@@ -387,6 +387,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 7681, 11559) Cookie values no longer override GET and POST variables.
 * (bug 5262) Fully-qualified $wgStylePath no longer corrupted on XML feeds
 * (bug 3269) Inaccessible titles ending in '/.' or '/..' now forbidden.
+* (bug 12935) Fully-qualify archive URLs correctly in deletion message
 
 
 == Parser changes in 1.12 ==
